manifests/base/mlx-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlx-ui
  namespace: kubeflow
  labels:
    service: mlx-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      service: mlx-ui
  template:
    metadata:
      name: mlx-ui
      labels:
        service: mlx-ui
    spec:
      containers:
      - name: mlx-ui
        # You can use your own webapp image below
        image: mlexchange/mlx-ui:nightly-origin-main
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        volumeMounts:
        - mountPath: /workspace/models
          name: dashboard-admin
          readOnly: true
          # When deploying MLX on OpenShift, readOnly SCC may be required for mlx-ui.
      volumes:
      - name: dashboard-admin
        secret:
          items:
          - key: admin.json
            path: admin.json
          secretName: mlx-dashboard-admin
      serviceAccountName: mlx-ui
---
apiVersion: v1
kind: Service
metadata:
  name: mlx-ui
  namespace: kubeflow
  labels:
    service: mlx-ui
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  type: NodePort
  selector:
    service: mlx-ui
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mlx-ui
  namespace: kubeflow
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /mlx
    rewrite:
      uri: /mlx
    route:
    - destination:
        host: mlx-ui.kubeflow.svc.cluster.local
        port:
          number: 80
    timeout: 300s
